fix: add animation delay to allow accurate transform animation on safari #43

--- a/src/style.scss
+++ b/src/style.scss
@@ -181,6 +181,7 @@
   top: 0;
   bottom: 0;
   left: -100%;
+  animation-delay: 0.3s;
   animation-name: autoplay-progress;
   animation-timing-function: linear;
   animation-iteration-count: 1;
